# dataloader

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  requirements.txt  setup.py  setup_environment.sh  test_setup.py
config/: config_loader.py  data_loader_config.yaml  prompt_loader.py  universal_dataloader_config.yaml
core/: data_models.py  graph_builders.py  unified_dataloader.py
examples/: example_unified_usage.py  extending_for_domains.py
sample_data/example_system/configs/: app.yaml
simulated_rhel_systems/app-prod-01/etc/: redhat-release
simulated_rhel_systems/app-prod-01/proc/: cmdline  uptime
simulated_rhel_systems/db-prod-01/etc/: redhat-release
simulated_rhel_systems/db-prod-01/etc/oval/: rhel_definitions.xml
simulated_rhel_systems/db-prod-01/etc/yum.repos.d/: redhat.repo
simulated_rhel_systems/db-prod-01/proc/: cmdline  uptime  version
simulated_rhel_systems/web-prod-01/etc/: yum.conf
simulated_rhel_systems/web-prod-01/etc/oval/: rhel_definitions.xml
simulated_rhel_systems/web-prod-01/proc/: uptime
simulated_rhel_systems/web-prod-02/etc/: redhat-release
simulated_rhel_systems/web-prod-02/etc/oval/: rhel_definitions.xml
simulated_rhel_systems/web-prod-02/etc/rhsm/: rhsm.conf
simulated_rhel_systems/web-prod-02/etc/yum.repos.d/: epel.repo  redhat.repo
simulated_rhel_systems/web-prod-02/proc/: cmdline  uptime  version
simulated_rhel_systems/web-stage-01/etc/: yum.conf
simulated_rhel_systems/web-stage-01/etc/security/: limits.conf
simulated_rhel_systems/web-stage-01/etc/yum.repos.d/: redhat.repo
simulated_rhel_systems/web-stage-01/proc/: uptime  version
tests/: test_complete_4phase_pipeline.py  test_fresh_database_setup.py  test_langchain_approach.py  test_unified_loader.py
utils/: cleanup_dataloaders.py  demo_data_generator.py  rhel_filesystem_generator.py
